Handle negative times in TimeClamper::ClampTimeResolution.

Patch from dansnyder@.

Negative times are being seen on certain platforms (the Android P
preview and some Cast devices, in particular). Handle them gracefully
rather than asserting.

Bug: 856858
Tbr: jochen@chromium.org
Change-Id: Ib05cb8534bec9e6a95df2f989a9d65fedfeece0b
Reviewed-on: https://chromium-review.googlesource.com/1142238
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577005}
Former-commit-id: 0ebb714c18a2ec435ac6ed9532435330dcbef44d