third_party/blink/renderer/platform/time_clamper.cc
@@ -15,13 +15,19 @@ namespace blink {
 TimeClamper::TimeClamper() : secret_(base::RandUint64()) {}
 
 double TimeClamper::ClampTimeResolution(double time_seconds) const {
-  DCHECK_GE(time_seconds, 0);
+  bool was_negative = false;
+  if (time_seconds < 0) {
+    was_negative = true;
+    time_seconds = -time_seconds;
+  }
   double interval = floor(time_seconds / kResolutionSeconds);
   double clamped_time = interval * kResolutionSeconds;
   double tick_threshold = ThresholdFor(clamped_time);
 
   if (time_seconds >= tick_threshold)
-    return (interval + 1) * kResolutionSeconds;
+    clamped_time = (interval + 1) * kResolutionSeconds;
+  if (was_negative)
+    clamped_time = -clamped_time;
   return clamped_time;
 }
 
